fix-prefix-alignment (#5541)

--- a/src/Input/InputMixins.scss
+++ b/src/Input/InputMixins.scss
@@ -25,8 +25,8 @@
 
   .prefix,
   .suffix {
-    height: $height;
-    line-height: $height;
+    height: calc(#{$height} - 2px);
+    line-height: calc(#{$height} - 2px);
   }
 }
 
